--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
   </head>
   <body>
-    start your code here
+  <div class="start">
+    <img src="https://m.media-amazon.com/images/I/41wyRoKms2L._SX300_SY300_QL70_FMwebp_.jpg" alt="">
+    <p>Wiskers Hair Serum</p>
+    <p>$ 500.00</p>
+
+  </div>
   </body>
 </html>
