--- a/3-CSS/305-CSS-Flexbox/CSS-305-01/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-01/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+   <header class="header">
+    <h1>CSS FLEXBOX PHOTO  GALLERY</h1>
+</header>
+    <div class="img">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="GARRISON KEILLOR">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="BILL DANA">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="MASON COOLEY">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="NAFISA JOSEPH">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="ALEXIS FLORA HOPE">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="JIM DAVIS">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="ELLEN PERRY BERKELEY">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="TAY HOHOFF">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="W.L. GEORGE">
+
+    </div>
+
+   
 </body>
 </html>
