--- a/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-01/index.html
+++ b/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-01/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
   </head>
   <body>
-    Start your code here
+    <div class="print">
+      <input type="text" id="input-work">
+    <p id="read"></p>
+    <script src="index.js"></script>
+   
+    </div>
   </body>
 </html>
