--- a/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-03/index.html
+++ b/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-03/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping List</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    Start your code here
+    <h1>MY Shopping List</h1>
+    <div class="form">
+      <label for="item">Enter a new Item:</label>
+      <input type="text" id="item">
+      <button id="submit">Add Item</button>
+      <ul id="list"> <button id="clear">Delete</button></ul>
+      
+    </div>
+    <script src="index.js"></script>
+   
   </body>
 </html>
