--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-01/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-01/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    Start your code here
+    <div class="container">
+      <input type="text" class="keyboard">
+        <div id="keycode">
+       <p id="text">keycode</p>
+         <p id="ans"></p>
+       </div>
+       <div id="keyboard">
+       <p id="key-pressed">Key Pressed</p>
+       <p id="key-text"></p>
+       </div>
+   </div>   
+    <script src="index.js"></script>
   </body>
 </html>
