--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="main">
+        <div class="box box1">c</div>
+        <div class="box box2">0</div>
+        <br>
+        <div class="box box3">7</div>
+        <div class="box box4">8</div>
+        <div class="box box5">9</div>
+        <div class="box box6">*</div>
+        <br>
+        <div class="box box7">4</div>
+        <div class="box box8">5</div>
+        <div class="box box9">6</div>
+        <div class="box box10">\</div>
+        <br>
+        <div class="box box11">1</div>
+        <div class="box box12">2</div>
+        <div class="box box13">3</div>
+        <div class="box box14">+</div>
+        <br>
+        <div class="box box15">.</div>
+        <div class="box box16">0</div>
+        <div class="box box17">=</div>
+        <div class="box box18">-</div>
+
+
+    </div>
 </body>
 </html>
