--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="indec.css">
   </head>
   <body>
-    <h1  id="title">Drum kit</h1>
+    <div class="main">
+      <h1  id="title">Drum</h1>
+      <img src="https://images.emojiterra.com/google/noto-emoji/v2.034/512px/1f941.png" alt="">
+      <h1>kit</h1>
+
+    </div>
+    
     <div class="set">
       <button class="w drum">w</button>
       <button class="a drum">a</button>
