--- a/3-CSS/306-CSS-Grid/CSS-306-01/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="main">
+        <div class="item1">1</div>
+        <div class="item2">2
+            <img src="https://sites.google.com/site/doraemon1161104319/_/rsrc/1518075394469/characters-2/nobi-nobita/Sitting-Image-Of-Nobita.png?height=200&width=188" alt="">
+        </div>
+        <div class="item3">3</div>
+        <div class="item4">4</div>
+        <div class="item5">5</div>
+        <div class="item6">6</div>
+        <div class="item7">7</div>
+        <div class="item8">8</div>
+        <div class="item9">9</div>
+        <div class="item10">10</div>
+        <div class="item11">11</div>
+        <div class="item12">12</div>
+        <div class="item13">13</div>
+        <div class="item14">14</div>
+        <div class="item15">1</div>
+        <div class="item16">2</div>
+        <div class="item17">3</div>
+        <div class="item18">4</div>
+        <div class="item19">5</div>
+        <div class="item20">6</div>
+        <div class="item21">7</div>
+        <div class="item22">8</div>
+        <div class="item23">9</div>
+        <div class="item24">10</div>
+
+        
+
+
+    </div>
+   
 </body>
 </html>
