--- a/3-CSS/306-CSS-Grid/CSS-306-03/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <main>
+        <section class="header">
+            <div class="home">
+                <h3>Home</h3>
+            </div>
+            <div class="about">
+                <h3>About</h3>
+            </div>
+            <div class="logo">
+               <h1>m</h1>
+            </div>
+            <div class="menu">
+                <h3>Menu</h3>
+            </div>
+            <div class="contact"><h3>Contact</h3></div>
+        </section>
+        <section class="part">
+            <div class="box1">1</div>
+        <div class="box2">2
+            <p> my name bi vkd odbiwsmidd idhnd kdnd ld xod scid vkvsjnsdfkv vljafv kvndvk </p>
+        </div>
+        <div class="box3">3</div>
+        <div class="box4">4</div>
+        <div class="box5">5</div>
+        <div class="box6">6</div>
+        <div class="box7">7</div>
+        <div class="box8">8</div>
+        <div class="box9">9</div>
+        </section>
+        
+
+        
+    </main>
+  
 </body>
 </html>
