--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="main">
+        
+        <button class="btn">Hover Me</button>
+       <div class="dropdown">
+        <a href="">link 1</a>
+        <a href="">link 2</a>
+        <a href="">link 3</a>
+
+       </div>
+
+    </div>
 </body>
 </html>
