--- a/4-Advance-JS/405-WorldCountries-Data-Visualization/AdvanceJS-405-01/index.html
+++ b/4-Advance-JS/405-WorldCountries-Data-Visualization/AdvanceJS-405-01/index.html
@@ -5,8 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    Start your code here
+    <header id="coutries" >
+      <h2>
+          World Coutries Data
+      </h2>
+      <h5>
+          Currently,we have 250 coutries
+      </h5>
+  </header>
+   <main>
+      <div class="wrapper">
+          <div class="graph-buttons">
+              <button class="population" onclick="showpop()">
+               Population
+              </button>
+              <button class="languages" onclick="showlang()">languages</button>
+          </div>
+          <h4 class="graph-title"></h4>
+          <div class="graph">
+           <div class="graph-wrapper" id="stat"></div>
+          </div>
+      </div>
+   </main>
+   <table id="tableid">
+   
+   </table>
+   <table id="populationtable">
+      <tr>
+          <td>
+              world
+          </td>
+          <td>
+              <div class="tablediv" style='width:100%'></div>
+          </td>
+          <td>
+              7693165599
+          </td>
+      </tr>
+      
+   </table>
+   <script src="countries_data.js"></script>
+   <script src="index.js"></script>
   </body>
 </html>
