--- a/4-Advance-JS/408-leaderboard/AdvanceJS-408-01/index.html
+++ b/4-Advance-JS/408-leaderboard/AdvanceJS-408-01/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    Start your code here
+   <div class="container">
+<h2>30 Days Of JavaScript Challenge Leaderboard</h2>
+   </div>
+   <form >
+    <input type="text" placeholder="First name">
+    <input type="text" placeholder="Last name">
+    <input type="text" placeholder="Country">
+    <input type="text" placeholder="*layer score">
+    <button>Add Player</button>
+
+   </form>
+    
+    <script src="index.js"></script>
   </body>
 </html>
