--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/index.html
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vikash Pandey</title>
+    <link rel="shortcut icon" href="https://media-exp1.licdn.com/dms/image/C4D03AQFQUT67I6wTsw/profile-displayphoto-shrink_800_800/0/1660709151211?e=1672876800&v=beta&t=Luj0KoafAkUdQY2H0DKO_J2bDYv8Rjb8cmYm4voDqRc" type="image/x-icon">
 </head>
 <body>
-    <!-- start your code here -->
+    <nav>
+        <div class="logo">
+            <img src="" alt="">
+        </div>
+        <div class="cont">
+            <div class="menu">p</div>
+            <div class="menu">Event</div>
+            <div class="menu"></div>
+            <div class="menu"></div>
+            <div class="menu"></div>
+
+        </div>
+    </nav>
+   <img src="https://scontent.fbho4-3.fna.fbcdn.net/v/t39.30808-6/313861878_3336344669979268_4033918874868536049_n.jpg?stp=dst-jpg_s851x315&_nc_cat=102&ccb=1-7&_nc_sid=da31f3&_nc_ohc=ftMEhDwyqekAX8zSbVh&_nc_ht=scontent.fbho4-3.fna&oh=00_AfD318ncCnm7BSLF4CaKubI0IUhU3VEtdvlszh-qmlQ8WA&oe=636B2C25" alt="">
 </body>
 </html>
