--- a/3-CSS/309-CSS-Pseudo-Elements/CSS-309-01/index.html
+++ b/3-CSS/309-CSS-Pseudo-Elements/CSS-309-01/index.html
@@ -5,8 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div id="sheet">
+        <div id="header">
+            <h1>Balance Sheet</h1>
+            <h2>AcmeWidgetCrop</h2>
+            <p class="row">
+                <span>2019</span>
+                <span>2021</span>
+                <span class="current">2022</span>
+            </p>
+           
+
+        </div>
+        <h2>Assets</h2>
+        <div class="section">
+            <p class="row">
+                <span class="name">cash</span>
+                <span >$25</span>
+                <span >$35</span>
+                <span class="current">$28</span>
+            </p>
+            <span class="notes">This is the cash we currently on hand.</span>
+            <p class="row"> 
+                <span class="name">cheacking</span>
+                <span >$54</span>
+                <span >$56</span>
+                <span class="current">$53</span>
+            </p>
+            <span class="note">Our primary transactional account.</span>
+            <p class="row">
+                <span class="name">Savings</span>
+                <span >$500</span>
+                <span >$650</span>
+                <span class="current">$728</span>
+            </p>
+            <span class="note">Funds sets aside for emergenices.</span>
+            <p class=" row total" tabindex="1">
+                <span class="name">Total</span>
+                <span >$579</span>
+                <span >$736</span>
+                <span class="current">$809</span>
+            </p>
+
+
+
+        </div>
+        <h2>Liabilities</h2>
+        <div class="section">
+            <p class="row">
+                <span class="name">Loans</span>
+                <span >$500</span>
+                <span >$250</span>
+                <span class="current">$0</span>
+            </p>
+            <span class="notes">The outstanding balance on our startuo loan.</span>
+            <p class="row"> 
+                <span class="name">Expenses</span>
+                <span >$200</span>
+                <span >$300</span>
+                <span class="current">$400</span>
+            </p>
+            <span class="notes">Annual anticipated expenses,such as payroll.</span>
+            <p class="row">
+                <span class="name">Credit</span>
+                <span >$50</span>
+                <span >$50</span>
+                <span class="current">$75</span>
+            </p>
+            <span class="notes">The outstanding balance on your credit card.</span>
+            <p class=" row total"  tabindex="1">
+                <span class="name">Total</span>
+                <span >$750</span>
+                <span >$600</span>
+                <span class="current">$475</span>
+            </p>
+        </div>
+        <h2>Net Worth</h2>
+        <p class=" row total"  tabindex="1">
+            <span class="name">Total</span>
+            <span >$-71</span>
+            <span >$136</span>
+            <span class="current">$334</span>
+        </p>
+        
+        </div>
+
+    </div>
+    <footer>Last update:nov 2022</footer>
+
+ 
 </body>
 </html>
