--- a/3-CSS/309-CSS-Pseudo-Elements/CSS-309-01/index.html
+++ b/3-CSS/309-CSS-Pseudo-Elements/CSS-309-01/index.html
@@ -43,7 +43,7 @@
                 <span class="current">$728</span>
             </p>
             <span class="note">Funds sets aside for emergenices.</span>
-            <p class=" row total" tabindex="1">
+            <p class=" row total" tabgiindex="1">
                 <span class="name">Total</span>
                 <span >$579</span>
                 <span >$736</span>
