--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/index.html
@@ -20,10 +20,10 @@
 
       <select name="" id="service" class="option">
         <option  selected disabled value="">--Choose an option--</option>
-        <option value="20">20%-Good</option>
-        <option value="30">30%-Outstanding</option>
-        <option value="15">15%-It was okay</option>
-        <option value="10">10%-Bad</option>
+        <option value=".03">20%-Good</option>
+        <option value=".05">30%-Outstanding</option>
+        <option value=".01">15%-It was okay</option>
+        <option value=".05">10%-Bad</option>
       </select>
       <p>How many people sharing the bill</p>
       <div class="r">
