--- a/2-HTML/201-HTML-RESUME/HTML-201-01/index.html
+++ b/2-HTML/201-HTML-RESUME/HTML-201-01/index.html
@@ -27,6 +27,7 @@
         <li>JavaScript</li>
         <li>SQL</li>
         <li>GIT</li>
+        <li>Css</li>
       </ul>
       <hr>
       <h2>Hobbies</h2>
