--- a/4-Advance-JS/410-Projects/AdvanceJS-410-02/index.html
+++ b/4-Advance-JS/410-Projects/AdvanceJS-410-02/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    Start your code here
+    <nav>
+      <div class="container">
+          <h1>
+              Dictionary
+          </h1>
+      </div>
+      </nav>
+      <section class="input containe">
+          <h2>
+              Find any word exist in the world
+          </h2>
+          <div class="form_wrap">
+              <div class="input_wrap">
+                  <input type="text" id="input" placeholder="type a word">
+                  <button id="search"> Search</button>
+              </div>
+          </div>
+      </section>
+      <section class="data contain">
+          <p class="def"></p>
+          <div class="not_found"></div> 
+      </section>
+      <script src="index.js"></script>
   </body>
 </html>
