--- a/Mct/index.html
+++ b/Mct/index.html
@@ -191,13 +191,13 @@
         </div>
         <div class="border2"></div>
         <div class="menu2">
-          <!-- <a class="selected" href=""><b>A.</b>Cardamom</a><br>
+          <!-- <a class="selected"><b>A.</b>Cardamom</a><br>
             <br>
-            <a class="selected" href=""><b>B.</b>Vikash</a><br>
+            <a class="selected" ><b>B.</b>Vikash</a><br>
             <br>
-            <a class="selected" href=""><b>C.</b>Pandey</a><br>
+            <a class="selected" ><b>C.</b>Pandey</a><br>
             <br>
-            <a  class="selected" href=""><b>d.</b>Kuldeep</a><br>-->
+            <a  class="selected" ><b>d.</b>Kuldeep</a><br>-->
 
         </div>
 
