--- a/2-HTML/204-HTML-TRIBUTE-PAGE/HTML-204-02-TributePage/index.html
+++ b/2-HTML/204-HTML-TRIBUTE-PAGE/HTML-204-02-TributePage/index.html
@@ -14,7 +14,7 @@
         .insta{
             padding-left: 475px;
         }
-        .tweet{
+        .tweeter{
             padding-left: 475px;
         }
         iframe{
@@ -36,7 +36,7 @@
 
         <div class="container">
             <h2>Tweets🐦</h2>
-            <div class="tweet">
+            <div class="tweeter">
                 <blockquote class="twitter-tweet"><p lang="und" dir="ltr">🌊☀️ <a href="https://t.co/VBVvlIIvLh">pic.twitter.com/VBVvlIIvLh</a></p>&mdash; Virat Kohli (@imVkohli) <a href="https://twitter.com/imVkohli/status/1535961086012235776?ref_src=twsrc%5Etfw">June 12, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
             </div>
 
