--- a/3-CSS/309-CSS-Pseudo-Elements/CSS-309-01/index.html
+++ b/3-CSS/309-CSS-Pseudo-Elements/CSS-309-01/index.html
@@ -12,7 +12,7 @@
         <div id="header">
             <h1>Balance Sheet</h1>
             <h2>AcmeWidgetCrop</h2>
-            <p class="row">
+            <p class="row first ">
                 <span>2019</span>
                 <span>2021</span>
                 <span class="current">2022</span>
