--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.html
@@ -11,7 +11,7 @@
   <div class="start">
     <img src="https://m.media-amazon.com/images/I/41wyRoKms2L._SX300_SY300_QL70_FMwebp_.jpg" alt="">
     <p>Wiskers Hair Serum</p>
-    <p>$ 500.00</p>
+    <p class="price">$ 500.00</p>
 
   </div>
   </body>
